--- a/style.css
+++ b/style.css
@@ -5,3 +5,14 @@
     box-sizing: border-box;
 
 }
+body{
+    background-color: #001ed0;
+}
+.app{
+    background-color: #fff;
+    width: 90%;
+    max-width:600px ;
+    margin: 100px auto 0;
+    border-radius: 10px;
+    padding: 30px;
+}
