--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
+@font-face {
+    font-family: iran-sans;
+    src: url(font/IRANSansXFaNum-UltraLight.ttf);
+}
+
+@font-face {
+    font-family: iran-sans-input;
+    src: url(font/IRANSansXFaNum-Regular.ttf);
+}
+
+@font-face {
+    font-family: iran-sans-title;
+    src: url(font/IRANSansXFaNum-Bold.ttf);
+}
+
 *{
     margin: 0;
     padding: 0;
-    font-family: "Poppins" , sans-serif;
+    font-family: iran-sans-title;
     box-sizing: border-box;
 
 }
@@ -39,7 +54,7 @@ body{
     border: 1px solid #222;
     padding: 10px;
     margin: 10px 0;
-    text-align: left;
+    text-align: right;
     border-radius: 4px;
     cursor: pointer;
     transition: all 0.3s;
