--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body{
     transition: all 0.3s;
 }
 .btn:hover:not([disabled]){
-    background: #222;
+    background: #0185a7;
     color: #fff;
 }
 .btn:disabled{
